--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   display: flex;
   min-height: 100vh;
   background: black;
-  color: white;
+  color: purple;
 }
 
 .side-nav {
@@ -66,11 +66,6 @@ body {
 .side-nav ul li:nth-child(7) a { --menu-link-active-color: var(--info-color); }
 .side-nav ul li:nth-child(8) a { --menu-link-active-color: var(--success-color); }
 .side-nav ul li:nth-child(8) a { --menu-link-active-color: var(--warning-color); }
-
-
-.side-nav li:hover::before {
-  left: calc(100% + 1rem);
-}
 
 .side-nav li:hover a {
   color: var(--menu-link-active-color);
